--- a/Functions.qmd
+++ b/Functions.qmd
@@ -235,18 +235,19 @@ Power calculator function that takes as its arguments:
 • `delta_1` - the minimum threshold for the clinically relevant treatment difference
 
 ```{r}
-power <- function(result, mu, delta_1, type = "any"){
+power <- function(result, mu, delta_1, delta_0, type = "any"){
   #any-pair power: probability of any effective treatment being recommended
   
   # indices of treatments with a relevant treatment effect
   if(type == "any"){
+    #correct <- which(mu >= delta_1)-1
     correct <- which(mu >= delta_1)-1
   }
   if(type == "LFC"){
-    correct <- which.max(mu) - 1 #### revise this ?
+    correct <- which(abs(mu - delta_1) < 1e-8) - 1
+    #correct <- which(mu >= delta_1)-1
     
-    #max_mu <- max(mu)
-    #correct <- which(mu == max_mu) - 1 # this isnt really the LFC
+
   }
   power_est <- mean(!is.na(result$effective_treatment) & 
          result$effective_treatment %in% correct)
@@ -260,7 +261,7 @@ power <- function(result, mu, delta_1, type = "any"){
 `mams_hyp` produces the same return objects for different scenarios of the null hypothesis. The function takes the same arguments as `mams_replicates`, but instead of the mean vector `mu`, a matrix `Mu` whose columns consist of mean vectors for different null hypothesis scenarios must be passed.
 
 ```{r}
-mams_hyp <- function(bounds = 'obf_one', l, u, n, r = 1, sd = 1, Mu, delta_1, nrep = 1000){
+mams_hyp <- function(bounds = 'obf_one', l, u, n, r = 1, sd = 1, Mu, delta_1, delta_0, nrep = 1000){
   
   ESS <- matrix(NA, nrow = 1, ncol = ncol(Mu), dimnames = dimnames(Mu))
   PES <- list()
@@ -313,7 +314,7 @@ mams_hyp <- function(bounds = 'obf_one', l, u, n, r = 1, sd = 1, Mu, delta_1, nr
       lfc_power[h] <- NA
     }
     else{
-      anypair_power[h] <- power(reps$results, mu = mu, delta_1 = delta_1, type = 'any')
+      anypair_power[h] <- power(reps$results, mu = mu, delta_1 = delta_1, delta_0 = delta_0, type = 'any')
       lfc_power[h] <- power(reps$results, mu = mu, delta_1 = delta_1, type = 'LFC')
     }
     
@@ -451,7 +452,7 @@ abline(h = 0.05, lty = 2)
 
 Actual trial places restrictions on how many arms can progress after each interim (pre-specified MAMS design) - for the purposes of this project this restriction will be lifted and the trial will be considered a full MAMS design
 
-### Find $\delta_0$ for ROSSINI-2
+### $\delta_0$ search
 
 ```{r}
 n <- c(201, 226, 517)
@@ -488,7 +489,9 @@ abline(h = 0.5, lty = 2, col = 'gray')
 abline(v = 0.02, lty = 2, col = 'gray')
 ```
 
-```{r}
+### Scenario comparison
+
+```{r can delete later}
 n = c(201, 226, 517)
 r <- 2
 mu = matrix(data = c(0, 0.05, rep(0.02,6)), ncol = 1)
@@ -496,17 +499,25 @@ mu = matrix(data = c(0, 0.05, rep(0.02,6)), ncol = 1)
 mams_hyp(l = l, u = u, Mu = mu, n = n, sd = 0.33, r = r, delta_1 = 0.05)
 ```
 
+Simulate trials using different stopping boundaries under the following scenarios:
+
+$LFC$ : Least Favourable Configuration - treatment 1 has a true treatment difference of $\delta_1$ and all other treatments have true treatment difference $\delta_0$
+
+$H_G$ : Global null - all treatments have true treatment difference of zero
+
+$multiple$ : multiple treatment arms have treatment differences in the range $\delta_0 \leq \delta_k \leq \delta_1$
+
 ```{r}
 LFC <- c(0, 0.05, rep(0.02, 6))
 HG <- c(rep(0,8))
-multiple <- c(0, 0.05, 0.04, 0.04, 0, 0, 0, 0)
+multiple <- c(0, 0.05, 0.05, 0.04, 0, 0, 0, 0)
 Mu <- cbind(HG, LFC, multiple)
 
-pocock <- mams_hyp(bounds = 'pocock', r = 2, sd = 0.33, n = n, delta_1 = 0.05, Mu = Mu)
+pocock <- mams_hyp(bounds = 'pocock', r = 2, sd = 0.33, n = n, delta_1 = 0.05, delta_0 = 0.02, Mu = Mu)
 
-obf_1 <- mams_hyp(bounds = 'obf_one', r = 2, sd = 0.33, n = n, delta_1 = 0.05, Mu = Mu)
+obf_1 <- mams_hyp(bounds = 'obf_one', r = 2, sd = 0.33, n = n, delta_1 = 0.05, delta_0 = 0.02, Mu = Mu)
 
-obf_2 <- mams_hyp(bounds = 'obf', r = 2, sd = 0.33, n = n, delta_1 = 0.05, Mu = Mu)
+obf_2 <- mams_hyp(bounds = 'obf', r = 2, sd = 0.33, n = n, delta_1 = 0.05, delta_0 = 0.02, Mu = Mu)
 ```
 
 ```{r}
@@ -518,7 +529,15 @@ TypeI <- rbind(pocock$TypeI, obf_1$TypeI, obf_2$TypeI)
 colnames(TypeI) <- c("TypeIrate") ; rownames(TypeI) <-  c("pocock", "one-sided", "two-sided")
 TypeI
 
-#Power <- 
+cat("\n Any-pair power \n")
+Power_A <- rbind(pocock$anypair_power, obf_1$anypair_power, obf_2$anypair_power)
+rownames(Power_A) <- c("pocock", "one-sided", "two-sided")
+Power_A
+
+cat("\n LFC power\n")
+Power_LFC <- rbind(pocock$LFC_power, obf_1$LFC_power, obf_2$LFC_power)
+rownames(Power_LFC) <- c("pocock", "one-sided", "two-sided")
+Power_LFC[,2]
 ```
 
 ```{r}
@@ -554,19 +573,91 @@ PES_2 <- list(
 PES_2 <- do.call(cbind, PES_2)
 rownames(PES_2) <- paste0("Stage", 1:3)
 
+cols <- gray.colors(nrow(PES_p))   # same palette as default for barplot
+
 barplot(PES_p,
         beside = TRUE,
-        legend = rownames(PES_p),
-        main = "Stopping probability by scenario",
-        ylab = "Probability")
+        main = "Early stop probability by scenario",
+        ylab = "Probability", 
+        xlab = "Pocock boundaries",
+        ylim = c(0,1),
+        col = cols) -> bp
+
+legend(x = 10, y = 1.2, 
+       legend = rownames(PES_p), 
+       fill = cols,
+       title = "Stage",
+       xpd = TRUE)
+
+
 barplot(PES_1,
         beside = TRUE,
         #main = "",
-        ylab = "Probability")
+        ylab = "Probability", 
+        xlab = "One-sided OBF boundaries",
+        ylim = c(0,1))
 barplot(PES_2,
         beside = TRUE,
         #main = "",
-        ylab = "Probability")
+        ylab = "Probability",
+        xlab = "Two-sided OBF boundaries",
+        ylim = c(0,1))
 
 
+```
+
+## Different allocation ratios
+
+```{r}
+cat("r = 1:1 \n")
+pocock <- mams_hyp(bounds = 'pocock', r = 1, sd = 0.33, n = n, delta_1 = 0.05, delta_0 = 0.02, Mu = Mu)
+
+obf_1 <- mams_hyp(bounds = 'obf_one', r = 1, sd = 0.33, n = n, delta_1 = 0.05, delta_0 = 0.02, Mu = Mu)
+
+obf_2 <- mams_hyp(bounds = 'obf', r = 1, sd = 0.33, n = n, delta_1 = 0.05, delta_0 = 0.02, Mu = Mu)
+
+ESS <- rbind(pocock$ESS, obf_1$ESS, obf_2$ESS)
+rownames(ESS) <- c("pocock", "one-sided", "two-sided")
+ESS
+
+TypeI <- rbind(pocock$TypeI, obf_1$TypeI, obf_2$TypeI)
+colnames(TypeI) <- c("TypeIrate") ; rownames(TypeI) <-  c("pocock", "one-sided", "two-sided")
+TypeI
+
+cat("\n Any-pair power \n")
+Power_A <- rbind(pocock$anypair_power, obf_1$anypair_power, obf_2$anypair_power)
+rownames(Power_A) <- c("pocock", "one-sided", "two-sided")
+Power_A
+
+cat("\n LFC power\n")
+Power_LFC <- rbind(pocock$LFC_power, obf_1$LFC_power, obf_2$LFC_power)
+rownames(Power_LFC) <- c("pocock", "one-sided", "two-sided")
+Power_LFC[,2]
+```
+
+```{r}
+cat("r = 1:sqrt(7) \n")
+pocock <- mams_hyp(bounds = 'pocock', r = 1/sqrt(7), sd = 0.33, n = n, delta_1 = 0.05, delta_0 = 0.02, Mu = Mu)
+
+obf_1 <- mams_hyp(bounds = 'obf_one', r = 1/sqrt(7), sd = 0.33, n = n, delta_1 = 0.05, delta_0 = 0.02, Mu = Mu)
+
+obf_2 <- mams_hyp(bounds = 'obf', r = 1/sqrt(7), sd = 0.33, n = n, delta_1 = 0.05, delta_0 = 0.02, Mu = Mu)
+
+ESS <- rbind(pocock$ESS, obf_1$ESS, obf_2$ESS)
+rownames(ESS) <- c("pocock", "one-sided", "two-sided")
+ESS
+
+TypeI <- rbind(pocock$TypeI, obf_1$TypeI, obf_2$TypeI)
+colnames(TypeI) <- c("TypeIrate") ; rownames(TypeI) <-  c("pocock", "one-sided", "two-sided")
+TypeI
+
+cat("\n Any-pair power \n")
+Power_A <- rbind(pocock$anypair_power, obf_1$anypair_power, obf_2$anypair_power)
+rownames(Power_A) <- c("pocock", "one-sided", "two-sided")
+Power_A
+
+cat("\n LFC power\n")
+Power_LFC <- rbind(pocock$LFC_power, obf_1$LFC_power, obf_2$LFC_power)
+rownames(Power_LFC) <- c("pocock", "one-sided", "two-sided")
+Power_LFC[,2]
 ```
