--- a/Simulations_MAMS.qmd
+++ b/Simulations_MAMS.qmd
@@ -162,28 +162,6 @@ mams_alphasp <- function(mu, sd, n, silent = TRUE){
 }
 ```
 
-#### Example of calculation of Lan-DeMetz boundaries:
-
-```{r}
-n = c(30,30,30)
-ldBounds(t = cumsum(n)/sum(n), alpha = 0.05/3 , sides = 1, iuse = 1)
-```
-
-How $\alpha$-spending functions control the overall Type-I error rate
-
-```{r, warning=FALSE}
-n = c(1, 31,24,46,13) # first sample is 1 so that plot starts at (0,0)
-obf_bounds <- ldBounds(t = cumsum(n)/sum(n), alpha = 0.05/4 , sides = 1, iuse = 1)
-p_bounds <- ldBounds(t = cumsum(n)/sum(n), alpha = 0.05/4 , sides = 1, iuse = 2)
-
-plot(obf_bounds$time, obf_bounds$exit.pr, type = 'o', lty = 3, pch = 16, ylim = c(0, bounds$alpha), 
-     ylab = 'Type I error probability', xlab = 'Information fraction')
-lines(p_bounds$time, p_bounds$exit.pr, type = 'o', lty = 1, pch = 16)
-abline(h = obf_bounds$alpha, lty = 2, col = 'darkblue')
-
-legend('bottomright', legend = c("Overall alpha","Pocock", "O'Brien-Fleming"), lty = c(2,1,3), pch = c(NA, 16, 16), col = c('darkblue', 'black', 'black'), bty = 'n')
-```
-
 #### Example of a MAMS trial simulation
 
 ```{r}
@@ -243,6 +221,8 @@ mams_replicates <- function(mu, sd, n, nrep = 1000){
 }
 ```
 
+### \*Example
+
 ```{r}
 mu <- c(0, 0.18, 0.20, 0.18, 0.19)
 n <- c(66, 38, 46)
@@ -261,7 +241,7 @@ Jgrid <- list(rep(60,2), rep(40,3), rep(30, 4), rep(24,5), rep(20, 6)) # Total N
 mu <- c(0,0.1,0.1,0)
 
 x <- numeric(length(Jgrid))
-y <- x
+y <- x 
 
 for(j in 1:length(Jgrid)){
   n <- Jgrid[[j]]
@@ -280,7 +260,7 @@ plot(x, y, type = 'b', main = "Expected sample size against number of interims",
 ### Probability of an early stop
 
 ```{r}
-Jgrid <- list(rep(60,2), rep(40,3), rep(30, 4), rep(24,5), rep(20, 6)) # Total N = 120
+Jgrid <- list(rep(60,2), rep(40,3), rep(30, 4), rep(24,5), rep(20, 6))# Total N = 120
 mu <- c(0,0.1,0.1,0)
 
 x <- numeric(length(Jgrid))
@@ -492,54 +472,6 @@ mams_ef <- function(l, u, sd = 1, n, mu, r = 1, silent = TRUE){
 }
 ```
 
-### Triangular boundaries
-
-```{r}
-n = rep(24,4)
-
-
-J <- length(n) # number of stages
-K <- length(mu) - 1 # number of treatment arms i.e. number of hypothesis tests
-
-B <- numeric(length = J)
-  
-  # indices for control and active experimental treatments
-  control_id <- 1
-  active_id <- 2:length(mu)
-  
-  # initialise list to store data vectors
-  y <- vector("list", length = length(mu))
-
-  # initiliase a running total of overall sample size
-  total_N <- 0
-  
-#--------- loop over stages 
-  for(j in 1:J){
-    #if(silent == FALSE){cat("Stage", j, ". Number of treatments:", length(active_id),"\n")}
-    
-    y[[control_id]] <- c(y[[control_id]], rnorm(n=r*n[j], mean = mu[control_id], sd = sd))
-    
-    for (i in active_id) { # treatment arms 
-      y[[i]] <- c(y[[i]], rnorm(n = n[j], mean = mu[i], sd = sd)) 
-    }
-    
-    # compute Z statistics for each treatment with control and against efficacy boundary
-    Z <- numeric(length(active_id))
-    keep <- logical(length = length(active_id))
-    
-    # compute Z statistics for all treatments 
-    for(k in seq_along(active_id)){ 
-      i <- active_id[k]
-      
-      nT <- sum(n[1:j]) # treatment arm current stage sample size 
-      nC <- r * nT # control arm current stage sample size 
-      Z[k] <- (mean(y[[i]]) - mean(y[[control_id]])) / sqrt(sd^2 * (1/nT + 1/nC))
-    }
-  
-  B[j] <- 
-  }
-```
-
 ## Replication function & Type I error rate
 
 The replication function takes the same arguments as the simulation function `mams_ef` plus an additional argument, `nrep = 1000`. The function produces `nrep` replicates of the trial specified by the other arguments and returns the following values:
@@ -584,7 +516,12 @@ mams_replicates2 <- function(l, u, mu, sd = 1, r = 1, n, nrep = 1000){
     TypeI <- NA
   }
   
-  return(list(early_stop_prob = p_earlystop, ESS_per_arm = ESS_arm, ESS_trial = ESS_trial, ESS_trial2 = ESS_trial2, TypeIrate = TypeI, results = resultsdf
+  return(list(early_stop_prob = p_earlystop, 
+              ESS_per_arm = ESS_arm, 
+              ESS_trial = ESS_trial, 
+              ESS_trial2 = ESS_trial2, 
+              TypeIrate = TypeI, 
+              results = resultsdf
               ))
 }
 ```
@@ -860,7 +797,7 @@ Actual trial places restrictions on how many arms can progress after each interi
 
 ```{r}
 n <- c(201, 226, 517)
-b <- ldBounds(t = cumsum(n)/sum(n), alpha = 0.05/7 , sides = 1, iuse = 2)
+b <- ldBounds(t = cumsum(n)/sum(n), alpha = 0.05/7 , sides = 1, iuse = 1)
 boundary_plotter(l = c(0, 0, b$upper.bounds[3]), u= b$upper.bounds)
 ```
 
@@ -882,9 +819,9 @@ for(i in 1:length(effects)){
   power_est[i] <- mean(res$results$effective_treatment == 1, na.rm = TRUE)
 }
 
-plot(effects, power_est, type = 'l', main = "Power against delta0 candidates",  xlab = "delta0 candidates", ylab = "Power")
+plot(effects, power_est, type = 'l', main =  expression(Power~ against~ delta[0]~ candidates),  xlab = expression(delta[0] ~ candidates), ylab = "Power")
 abline(h = 0.5, lty = 2, col = 'gray')
-abline(v = 0.0195, lty = 2, col = 'gray')
+abline(v = 0.02, lty = 2, col = 'gray')
 ```
 
 ```{r}
